adding link to erdostom

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 </div>
             
             <div class="footer">
-                <p>♥ from erdostom</p>
+                <p>♥ from <a href="http://github.com/erdostom">erdostom</a></p>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/underscore/underscore-min.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
